# rslite

./: .gitignore  .protected_files.txt  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.agent  KNOWN_ISSUES.md  Makefile  README.md  build.rs  build_all.sh  consolidate_variadic.py  debug_build.sh  lib.rs  patch.json  patch2.json  protected_files.txt  rust-toolchain.toml  shell_build.sh  spec.k.json  spec.k.md  task-spec.k.json  task-spec.k.md  testfixture_build.sh  testfixture_swap_optimized.sh
.github/scripts/: act-step-dispatch.sh  get-image-digest.sh  get-issue-details.sh  run-in-docker-claude.sh  run-in-docker-no-claude.sh  tail_hooks_log.sh
.github/workflows/: act-step-runner.yml  agent.yml  check-constraints.yml  coding-agent.yml  image-digest.yml  issue-trigger.yml  spec.k.json  spec.k.md
c2rust/: Cargo.toml
c2rust/crust-speedtest1/: Cargo.toml  SPEEDTEST_ANALYSIS.md  build.sh  diff_c  diff_rs
c_code/: exports.ver  printf_c.c  vmprintf.c  vsnprintf.c
crates/crust-core/: build.rs
crates/rslite/: Cargo.toml
crates/rslite-core/: Cargo.toml  lib.rs
crates/rslite-raw/: Cargo.toml
crates/source/: Cargo.toml
crates/sqlite-printf-macros/: Cargo.toml
crates/y2lite/: Cargo.toml
crust-sqlite-shell/: Cargo.toml  build.rs
crust-tclsqlite/: Cargo.toml
examples/: Cargo.toml
pub-interface/: Cargo.toml
sqlite-printf-common/: Cargo.toml
sqlite-printf-macros/: Cargo.toml
sqlite-printf-runtime/: Cargo.toml
src/: format_utils.rs  fts5.rs  mutex_pl.rs  parse.rs  printf_c_variadic.rs  safe_format.rs  safe_format_runtime.rs
tests/: vmprintf_test.rs
(+326 files in other folders)
